// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchBox() Rendering renders during init() 1`] = `
{
  "ariaLabel": "Search",
  "autofocus": false,
  "cssClasses": {
    "form": "ais-SearchBox-form",
    "input": "ais-SearchBox-input",
    "loadingIcon": "ais-SearchBox-loadingIcon",
    "loadingIndicator": "ais-SearchBox-loadingIndicator",
    "reset": "ais-SearchBox-reset",
    "resetIcon": "ais-SearchBox-resetIcon",
    "root": "ais-SearchBox",
    "submit": "ais-SearchBox-submit",
    "submitIcon": "ais-SearchBox-submitIcon",
  },
  "disabled": false,
  "isSearchStalled": false,
  "onChange": [Function],
  "onReset": [Function],
  "onSubmit": [Function],
  "placeholder": "",
  "query": "",
  "refine": [Function],
  "searchAsYouType": true,
  "showLoadingIndicator": true,
  "showReset": true,
  "showSubmit": true,
  "templates": {
    "loadingIndicator": [Function],
    "reset": [Function],
    "submit": [Function],
  },
}
`;

exports[`searchBox() Rendering renders during render() 1`] = `
{
  "ariaLabel": "Search",
  "autofocus": false,
  "cssClasses": {
    "form": "ais-SearchBox-form",
    "input": "ais-SearchBox-input",
    "loadingIcon": "ais-SearchBox-loadingIcon",
    "loadingIndicator": "ais-SearchBox-loadingIndicator",
    "reset": "ais-SearchBox-reset",
    "resetIcon": "ais-SearchBox-resetIcon",
    "root": "ais-SearchBox",
    "submit": "ais-SearchBox-submit",
    "submitIcon": "ais-SearchBox-submitIcon",
  },
  "disabled": false,
  "isSearchStalled": false,
  "onChange": [Function],
  "onReset": [Function],
  "onSubmit": [Function],
  "placeholder": "",
  "query": "",
  "refine": [Function],
  "searchAsYouType": true,
  "showLoadingIndicator": true,
  "showReset": true,
  "showSubmit": true,
  "templates": {
    "loadingIndicator": [Function],
    "reset": [Function],
    "submit": [Function],
  },
}
`;

exports[`searchBox() Rendering renders during render() 2`] = `
{
  "ariaLabel": "Search",
  "autofocus": false,
  "cssClasses": {
    "form": "ais-SearchBox-form",
    "input": "ais-SearchBox-input",
    "loadingIcon": "ais-SearchBox-loadingIcon",
    "loadingIndicator": "ais-SearchBox-loadingIndicator",
    "reset": "ais-SearchBox-reset",
    "resetIcon": "ais-SearchBox-resetIcon",
    "root": "ais-SearchBox",
    "submit": "ais-SearchBox-submit",
    "submitIcon": "ais-SearchBox-submitIcon",
  },
  "disabled": false,
  "isSearchStalled": false,
  "onChange": [Function],
  "onReset": [Function],
  "onSubmit": [Function],
  "placeholder": "",
  "query": "",
  "refine": [Function],
  "searchAsYouType": true,
  "showLoadingIndicator": true,
  "showReset": true,
  "showSubmit": true,
  "templates": {
    "loadingIndicator": [Function],
    "reset": [Function],
    "submit": [Function],
  },
}
`;

exports[`searchBox() Rendering sets the correct CSS classes 1`] = `
{
  "form": "ais-SearchBox-form",
  "input": "ais-SearchBox-input",
  "loadingIcon": "ais-SearchBox-loadingIcon",
  "loadingIndicator": "ais-SearchBox-loadingIndicator",
  "reset": "ais-SearchBox-reset",
  "resetIcon": "ais-SearchBox-resetIcon",
  "root": "ais-SearchBox",
  "submit": "ais-SearchBox-submit",
  "submitIcon": "ais-SearchBox-submitIcon",
}
`;
